--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -37,3 +37,25 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.loader {
+  font-size: 2rem;
+  color: #555;
+  width: fit-content;
+  height: 2rem;
+  line-height: 1rem;
+  display: block;
+  transform-origin: center;
+  translate: calc(1.5rem - 50%);
+  animation: mulShdSpin 2s infinite linear;
+}
+
+@keyframes mulShdSpin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(359deg);
+  }
+}
