--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -58,3 +58,25 @@ body {
     transform: rotate(359deg);
   }
 }
+
+.shaking-modal-anim {
+  animation: shakeModal 0.3s cubic-bezier(0.4, -0.6, 0.2, 1) both;
+}
+
+@keyframes shakeModal {
+  from {
+    transform: translateX(0);
+  }
+
+  33% {
+    transform: translateX(0.7rem);
+  }
+
+  66% {
+    transform: translateX(-0.7rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
